# Test

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: vault.hpp
src/: main.cpp  vault.cpp
tests/: crypto_tests.cpp
